--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "ikes-sprites\\"]
 	path = ikes-sprites\\
-	url = https://github.com/iosenberg/ikes-sprites.git
+	url = https://github.com/iosenberg/ikes-sprites
 	branch = ikes-sprites
