--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "ikes-sprites\\"]
-	path = ikes-sprites\\
+[submodule "ikes-sprites"]
+	path = ikes-sprites
 	url = https://github.com/iosenberg/ikes-sprites
 	branch = ikes-sprites
